tests/snapshots/assets__check_file@unit-code-show-closure-paren-complex.typ-80.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/unit/code/show-closure-paren-complex.typ
---
#show raw.where(block: false): it => if it.text.starts-with("<") and it.text.ends-with(">") {
  set text(1.2em)
  doc-style.show-type(it.text.slice(1, -1))
} else {
  it
}
