tests/snapshots/assets__check_file@unit-code-show-closure-paren.typ-0.snap
---
source: tests/src/unit.rs
input_file: tests/fixtures/unit/code/show-closure-paren.typ
snapshot_kind: text
---
#show raw: it => (
  it
    .text
    .ends-with(">")
)

#show raw: it => (
  it
    .text
    .ends-with(">")
)

#show raw: it => if true {
  set text(1.2em)
} else {
  it
}


#show raw: it => {
  it
}
