tests/snapshots/assets__check_file@unit-code-show-closure-paren.typ-120.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/unit/code/show-closure-paren.typ
---
#show raw: it => it.text.ends-with(">")

#show raw: it => (it.text.ends-with(">"))

#show raw: it => if true {
  set text(1.2em)
} else {
  it
}


#show raw: it => {
  it
}
