tests/snapshots/assets__check_file@unit-code-show-closure.typ-120.snap
---
source: tests/src/unit.rs
input_file: tests/fixtures/unit/code/show-closure.typ
snapshot_kind: text
---
#show heading.where(level: 1): it => box(width: 100%)[
  #v(0.5em)
  #set align(center)
  #set heading(numbering: "一")
  #it
  #v(0.75em)
]
